Leaderboards, navbar and back button

--- a/src/App.css
+++ b/src/App.css
@@ -65,3 +65,32 @@ body {
   display: flex;
   justify-content: center;
 }
+
+.leaderboard{
+  border: #E1E1E1 solid 1px;
+  border-radius: 10px;
+  box-shadow: 1px 5px #E1E1E1;
+  height: 180px;
+  width: 350px;
+  text-align: left;
+  padding-left: 15px;
+  padding-top: 10px;
+  margin-top: 20px;
+}
+
+.leaderboard > h2 {
+  font-weight: bold;
+  border-bottom: 2px solid #613DC1;
+  width: 95%;
+}
+
+.leaderboard-points {
+  position: absolute;
+  top: 147px;
+  left: 300px;
+  text-align: right;
+}
+
+.back-button{
+  
+}
