--- a/src/App.css
+++ b/src/App.css
@@ -100,3 +100,10 @@ body {
   margin-bottom: 20px;
   border-radius: 10px;
 }
+
+.progress-count {
+  text-align: left;
+  font-size: 1.5em;
+  font-weight: 500;
+  margin-bottom: 30px;
+}
